--- a/src/main/webapp/css/hexmap.css
+++ b/src/main/webapp/css/hexmap.css
@@ -56,8 +56,7 @@ padding-bottom: 30px;
 }
 .player2Territory{
 position:absolute;
-left:400px;
-top: -20px;
+padding-top: 100px;
 }
 .opacity{
 opacity:1.0;
